@@ -1,3 +1,9 @@
+2019-06-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/vect/simd-2.cc: Don't xfail, instead expect vectorization on
+	x86.
+	* g++.dg/vect/simd-5.cc: Likewise.
+
 2019-06-21  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/90909
